<resources>
    <string name="app_name">League Companion App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_page">Home Page</string>
    <string name="profile">Profile</string>
    <string name="champs">Champs</string>
    <string name="sign_up">Sign Up</string>
    <string name="champ_select">Champ Select</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_page">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="settings">Settings</string>
    <string name="create">Create</string>
    <string name="quick_select">Quick Select</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="not_a_user_sign_up">Not a User? Sign Up</string>

    <string name="Aatrox_Blurb">Once honored defenders of Shurima against the Void, Aatrox and his brethren would
        eventually become an even greater threat to Runeterra, and were defeated only by cunning mortal sorcery. But
        after centuries of imprisonment, Aatrox was the first to find...
    </string>
    <string name="Ahri_blurb">Innately connected to the magic of the spirit realm, Ahri is a fox-like vastaya who can
        manipulate her prey\'s emotions and consume their essence—receiving flashes of their memory and insight from
        each soul she consumes. Once a powerful yet wayward...
    </string>
    <string name="Akali_blurb">Abandoning the Kinkou Order and her title of the Fist of Shadow, Akali now strikes alone,
        ready to be the deadly weapon her people need. Though she holds onto all she learned from her master Shen, she
        has pledged to defend Ionia from its enemies, one...
    </string>
    <string name="Akshan_blurb">Raising an eyebrow in the face of danger, Akshan fights evil with dashing charisma,
        righteous vengeance, and a conspicuous lack of shirts. He is highly skilled in the art of stealth combat, able
        to evade the eyes of his enemies and reappear when they...
    </string>
    <string name="Alistar_blurb">Always a mighty warrior with a fearsome reputation, Alistar seeks revenge for the death
        of his clan at the hands of the Noxian empire. Though he was enslaved and forced into the life of a gladiator,
        his unbreakable will was what kept him from truly...
    </string>
    <string name="Ambessa_blurb">All who know the name Medarda respect and fear the family\'s leader, Ambessa. As a
        Noxian general, she embodies a deadly combination of ruthless strength and fearless resolve in battle. Her role
        as matriarch is no different, requiring great cunning to...
    </string>
    <string name="Amumu_blurb">Legend claims that Amumu is a lonely and melancholy soul from ancient Shurima, roaming
        the world in search of a friend. Doomed by an ancient curse to remain alone forever, his touch is death, his
        affection ruin. Those who claim to have seen him describe...
    </string>
    <string name="Anivia_blurb">Anivia is a benevolent winged spirit who endures endless cycles of life, death, and
        rebirth to protect the Freljord. A demigod born of unforgiving ice and bitter winds, she wields those elemental
        powers to thwart any who dare disturb her homeland...
    </string>
    <string name="Annie_blurb">Dangerous, yet disarmingly precocious, Annie is a child mage with immense pyromantic
        power. Even in the shadows of the mountains north of Noxus, she is a magical outlier. Her natural affinity for
        fire manifested early in life through unpredictable...
    </string>
    <string name="Aphelios_blurb">Emerging from moonlight\'s shadow with weapons drawn, Aphelios kills the enemies of
        his faith in brooding silence—speaking only through the certainty of his aim, and the firing of each gun. Though
        fueled by a poison that renders him mute, he is guided by...
    </string>
    <string name="Ashe_blurb">Iceborn warmother of the Avarosan tribe, Ashe commands the most populous horde in the
        north. Stoic, intelligent, and idealistic, yet uncomfortable with her role as leader, she taps into the
        ancestral magics of her lineage to wield a bow of True Ice...
    </string>

    <string-array name="champion_name_list">
        <item>Aatrox</item>
        <item>Ahri</item>
        <item>Akali</item>
        <item>Akshan</item>
        <item>Alistar</item>
        <item>Ambessa</item>
        <item>Amumu</item>
        <item>Anivia</item>
        <item>Annie</item>
        <item>Aphelios</item>
        <item>Ashe</item>
    </string-array>

    <string-array name="champion_title_list">
        <item>the Darkin Blade</item>
        <item>the Nine-Tailed Fox</item>
        <item>the Rogue Assassin</item>
        <item>the Rogue Sentinel</item>
        <item>the Minotaur"</item>
        <item>Matriarch of War</item>
        <item>the Sad Mummy</item>
        <item>the Cryophoenix</item>
        <item>the Dark Child</item>
        <item>Weapon of the Faithful</item>
        <item>the Frost Archer</item>
    </string-array>
</resources>