<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">


        <item
                android:id="@+id/navigation_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/title_home"/>

        <item
                android:id="@+id/navigation_dashboard"
                android:icon="@drawable/ic_dashboard_black_24dp"
                android:title="@string/champs"/>

        <item
                android:id="@+id/fab"
                android:title=""
                android:enabled="false"/>
        <item
                android:id="@+id/navigation_profile"
                android:icon="@drawable/baseline_person_24"
                android:title="@string/profile"/>
        <item
                android:id="@+id/navigation_login"
                android:icon="@drawable/baseline_admin_panel_settings_24"
                android:title="@string/login"/>

</menu>