<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.leaguecompanionapp.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home">
        <action android:id="@+id/action_navigation_home_to_fragment_login" app:destination="@id/fragment_login"/>
        <action android:id="@+id/action_navigation_home_to_navigation_notifications2"
                app:destination="@id/navigation_notifications"/>
        <action android:id="@+id/action_navigation_home_to_navigation_dashboard2"
                app:destination="@id/navigation_dashboard"/>
    </fragment>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.example.leaguecompanionapp.ui.dashboard.DashboardFragment"
            android:label="@string/champ_select"
            tools:layout="@layout/fragment_dashboard">
        <action android:id="@+id/action_navigation_dashboard_to_navigation_home2"
                app:destination="@id/navigation_home"/>
        <action android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
                app:destination="@id/navigation_notifications"/>
    </fragment>

    <fragment
            android:id="@+id/navigation_notifications"
            android:name="com.example.leaguecompanionapp.ui.notifications.NotificationsFragment"
            android:label="@string/profile"
            tools:layout="@layout/fragment_notifications">
        <action android:id="@+id/action_navigation_notifications_to_navigation_dashboard"
                app:destination="@id/navigation_dashboard"/>
        <action android:id="@+id/action_navigation_notifications_to_navigation_home2"
                app:destination="@id/navigation_home"/>
    </fragment>

    <fragment
            android:id="@+id/fragment_login"
            android:name="com.example.leaguecompanionapp.ui.Login.Fragment_Login"
            android:label="@string/login_page"
            tools:layout="@layout/fragment__login"/>
</navigation>