<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profileimage"
        android:gravity="center"
        android:padding="16dp"
        tools:context=".LoginFragment">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        <ImageView
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_marginBottom="24dp"
                android:elevation="20dp"
                android:src="@drawable/appicon"
        />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/username"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="28sp"
                android:background="@drawable/rounded_box"
                android:padding="8dp"
                android:inputType="text"
                android:elevation="20dp"
                android:id="@+id/login_username"
        />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="28sp"
                android:background="@drawable/rounded_box"
                android:padding="8dp"
                android:inputType="textPassword"
                android:elevation="20dp"
                android:id="@+id/login_password"
        />

        <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/login"
                android:backgroundTint="@color/royal_blue"
                android:textSize="20sp"
                android:elevation="20dp"
                android:id="@+id/login_button"
        />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/not_a_user_sign_up"
                android:backgroundTint="@color/transparent"
                android:textSize="16sp"
                android:elevation="20dp"
                android:id="@+id/notUser_button"
        />

        </LinearLayout>

</RelativeLayout>